# notemold

./: .env.example  LICENSE  README.md  SYNTAX_GUIDE.md  copy_external_dir_to_proj.sh  pyproject.toml
.agents/skills/notemold/: SKILL.md
notemold-formulator/: SKILL.md
